--- a/append.html
+++ b/append.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=
   , initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>jQuery</title>
+  <title>jQuery Append</title>
   <script src="../js/node_modules/jquery/dist/jquery.js"></script>
 </head>
 <body>
